# ros2-django

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
.devcontainer/: devcontainer.json
example_pkg/: CMakeLists.txt  example_pkg_node.py  manage.py  package.xml
example_pkg/example_app/: admin.py  models.py
example_pkg/example_app/migrations/: 0001_initial.py
example_pkg/example_django_project/: asgi.py  settings.py  urls.py  wsgi.py
ros2_django/: admin.py  fields.py  models.py  ros_node.py  services.py  types.py  utils.py
ros2_django/management/commands/: gen_ros_msgs.py
ros2_django/templates/: binary_image_file_input.html
