[metadata]
name = ros2-django
version = 0.8
description = A Django app to interface django models with ROS2 ecosystem
long_description = file: README.md
url = https://github.com/robocc/ros2-django
author = Alexandre Chataignon
author_email = alexandre.chataignon@robocc.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.1
    jsonschema